# ai-trading-signal

./: .gitignore  .replit  README.md  backfill.py  cookies.txt  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  restore_closed_signals.py  restore_signal.py  restore_trend_non_forex.py  start.sh  test_stocks_strategies.py
attached_assets/: Pasted--strategy-engine-py-check-exit-conditions-current-state_1773905105112.txt  Pasted-Add-a-Backfill-button-for-each-strategy-and-a-Last-Run-_1775098002159.txt  Pasted-Add-a-Backfill-button-for-each-strategy-and-a-Last-Run-_1775108738437.txt  Pasted-Add-a-complete-signal-remove-and-delete-system-for-the-_1774508581285.txt  Pasted-Add-a-new-read-only-public-endpoint-GET-api-v1-public-a_1774617015092.txt  Pasted-Add-a-new-read-only-public-endpoint-GET-api-v1-public-a_1774617202821.txt  Pasted-Add-a-persistent-asset-class-label-to-every-trading-sig_1774244069172.txt  Pasted-Add-all-26-client-requested-altcoins-to-multi-timeframe_1774254061917.txt  Pasted-Add-altcoins-to-the-Trend-Non-Forex-strategy-across-fcs_1774251233287.txt  Pasted-Add-exit-instruction-strings-for-stocks-algo1-and-stock_1774588307539.txt  Pasted-Add-selected-altcoins-to-multi-timeframe-py-TARGET-ASSE_1774252162736.txt  Pasted-Add-two-new-admin-dashboard-tabs-for-the-Stock-Trading-_1774442982798.txt  Pasted-Add-weekend-gate-holiday-gate-and-NYSE-session-gate-to-_1775548070565.txt  Pasted-Apply-the-NASDAQ-prefix-fix-to-fetch-stock-candles-in-b_1774515389050.txt  Pasted-Apply-three-remaining-fixes-to-trading-engine-strategie_1773914083167.txt  (+77 more)
(+87 files in other folders)
